package tabletop

open class System(override val name: String) : Entity()
